feat: Create home fragment in home module.

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,8 @@ kotlin.incremental=true
 
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+# Android
+android.databinding.enableV2=true
+android.enableJetifier=true
+android.useAndroidX=true
