feat: Create user module to authenticate and disconnect the user.

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,6 @@ kotlin.code.style=official
 android.databinding.enableV2=true
 android.enableJetifier=true
 android.useAndroidX=true
+
+# Api Keys
+theMovieDatabaseApiKey="fca529cb4c5723e2f0d995b483c6d430"
