--- a/user/src/main/AndroidManifest.xml
+++ b/user/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.paligot.user">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <application>
+        <activity android:name="com.paligot.user.main.MainUserActivity"/>
+    </application>
 </manifest>
