--- a/user/src/main/AndroidManifest.xml
+++ b/user/src/main/AndroidManifest.xml
@@ -1,9 +1,22 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.paligot.user">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+
+    <dist:module
+        dist:onDemand="false"
+        dist:title="@string/user_app_name">
+        <dist:fusing dist:include="false"/>
+    </dist:module>
+
     <application>
-        <activity android:name="com.paligot.user.main.MainUserActivity"/>
+        <activity android:name="com.paligot.user.main.MainUserActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
